syntax = "proto3";

package broker_service;

message Message {
  string body = 1;
}


service BrokerService {
  rpc EnviarVerbo(Message) returns (Message) {}
  rpc SayHello(Message) returns (Message) {}
  rpc EnviarDom(Message) returns (Message) {}
}

