syntax = "proto3";

package dns_service;

message Message {
  string body = 1;
}

message NewName {
  string name = 1;
  string domain = 2;
  string ip = 3;
}

service DnsService {
  rpc SayHello(Message) returns (Message) {}
  rpc CreateName(NewName) returns (Message) {}
}